--- a/source/assets/app/components/skills-section/skills-section.scss
+++ b/source/assets/app/components/skills-section/skills-section.scss
@@ -66,6 +66,8 @@
 
     &:before {
       left: 0;
+      -ms-transform: rotate(180deg);
+      -webkit-transform: rotate(180deg);
       transform: rotate(180deg);
     }
 
